Ensure ARIA treegrids expose expanded and collapsed status to VO
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
People
(Reporter: morgan, Assigned: morgan)
References
Details
(Whiteboard: [Mac2020_2])
Attachments
(1 file)
- Enable VO
- Navigate to
data:text/html,<button>Before</button><div role="tree" tabindex="0" aria-label="My drive" aria-activedescendant="myfiles"><div id="myfiles" role="treeitem" aria-label="My files" aria-selected="true" aria-expanded="false">My files</div><div role="treeitem" aria-label="Shared items" aria-selected="false" aria-expanded="false">Shared items</div></div> - VO+next past the button, VO+Shift+Down to enter the tree, focus on the first row
Expected:
VO says the first row is collapsed
Actual:
VO says nothing about expanded/collapsed status
Updated•5 years ago
|
Comment 2•5 years ago
|
||
OK, did some digging. For VO to say collapsed expanded, AXDisclosing needs to be settable. In WebKit, setting that attribute doesn't actually do anything (ie. aria-expanded does not get set to true), but it is officially writable.
🤷
| Assignee | ||
Comment 3•5 years ago
|
||
Comment 5•5 years ago
|
||
| bugherder | ||
Comment 6•5 years ago
|
||
The patch landed in nightly and beta is affected.
:morgan, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.
For more information, please visit auto_nag documentation.
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 7•5 years ago
|
||
I would like to confirm this fix. Could you please elaborate on your steps to reproduce?
I used the following steps (with default settings of Voice over) on Mac OS 11.1:
- Activate VoiceOver.
- Paste the test page code in the address bar.
- CTRL+ALT+RIGHT ARROW (2 times! to move the focus from the button to the text under it.
- CTRL+ALT+SHIFT+DOWN ARROW to focus "My Files"
In my case, the VoiceOver would properly read the first entry of the tree:
Release v85.0: "In My Files, collapsed, list box My Files (1 of 1)"
Beta v86.0b3: "In My drive, table Row 1 of 2 My Files selected My Files, collapsed"
Nightly v87.0a1: "In My Drive, table Row 1 of 2 My Files selected My Files, collapsed"
Is it enough if I simply paste the test page code into the address bar?
Can you elaborate on step 3, please? I suppose by "VO" you mean to use the VoiceOver modifier set key.
In my opinion, the bug is either not fixed properly or the steps are misunderstood.
| Assignee | ||
Comment 8•5 years ago
|
||
(In reply to Bodea Daniel [:danibodea] from comment #7)
I would like to confirm this fix. Could you please elaborate on your steps to reproduce?
I used the following steps (with default settings of Voice over) on Mac OS 11.1:
- Activate VoiceOver.
- Paste the test page code in the address bar.
- CTRL+ALT+RIGHT ARROW (2 times! to move the focus from the button to the text under it.
- CTRL+ALT+SHIFT+DOWN ARROW to focus "My Files"
In my case, the VoiceOver would properly read the first entry of the tree:
Release v85.0: "In My Files, collapsed, list box My Files (1 of 1)"
Beta v86.0b3: "In My drive, table Row 1 of 2 My Files selected My Files, collapsed"
Nightly v87.0a1: "In My Drive, table Row 1 of 2 My Files selected My Files, collapsed"Is it enough if I simply paste the test page code into the address bar?
Can you elaborate on step 3, please? I suppose by "VO" you mean to use the VoiceOver modifier set key.In my opinion, the bug is either not fixed properly or the steps are misunderstood.
Sorry about that, let me be more clear!
-
Enabled VoiceOver
-
Launch the data URI in the initial comment
-
Use Ctrl+Option+right arrow to navigate past the button, you should now be focused on both "my files" and "shared items" as a group
-
Use Ctrl+Option+Shift+down arrow to enter the group
Expected: VoiceOver reads that "my files" is row 1 of 2, selected, collapsed, level 1 -
Use Ctrl+Option+right arrow to navigate to "shared files"
Expected: VoiceOver reads that "shared items" is collapsed -
Use Ctrl+Option+left arrow to navigate back to "my files"
Expected: VoiceOver reads that "my files" is collapsed
It may have been that VoiceOver correctly reported the collapsed/expanded status on first-focus in previous versions, but did not maintain state across multiple focuses (arrowing back and forth)
Are you able to reproduce/verify with the above?
Comment 9•5 years ago
|
||
Yes, the steps are clear now.
It appears that Nightly v87.0a1 and Beta v86.0b4 reproduce the issue (reading "My Files collapsed" and "Shared Items collapsed") while Firefox Release v85.0 appears unaffected (reading only "My Files" and "Shared Files") and reproduction appears unreachable on Firefox ESR v78.7.0esr as you cannot enter the tree to select only "My Files" or only "Shared Items".
This was tested in Mac OS 11.1. Do you see another behavior?
| Assignee | ||
Comment 10•5 years ago
|
||
(In reply to Bodea Daniel [:danibodea] from comment #9)
Yes, the steps are clear now.
It appears that Nightly v87.0a1 and Beta v86.0b4 reproduce the issue (reading "My Files collapsed" and "Shared Items collapsed") while Firefox Release v85.0 appears unaffected (reading only "My Files" and "Shared Files") and reproduction appears unreachable on Firefox ESR v78.7.0esr as you cannot enter the tree to select only "My Files" or only "Shared Items".This was tested in Mac OS 11.1. Do you see another behavior?
Nope, that's exactly what we want; in 85 we didn't read the expanded/collapsed state, but after this landed in 86 and 87 we should read it :)
Updated•5 years ago
|
Description
•