Bug 1680589: Make AXDisclosing settable on outline rows r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D101053