accessible/tests/browser/mac/browser_outline.js
@@ -402,3 +402,32 @@ addAccessibleTask(
     );
   }
 );
+
+// Test outline registers AXDisclosed attr as settable
+addAccessibleTask(
+  `
+  <div role="tree" id="tree" tabindex="0" aria-label="My drive" aria-activedescendant="myfiles">
+    <div id="myfiles" role="treeitem" aria-label="My files" aria-selected="true" aria-expanded="false">My files</div>
+    <div role="treeitem" aria-label="Shared items" aria-selected="false" aria-expanded="true">Shared items</div>
+  </div>
+  `,
+  async (browser, accDoc) => {
+    const tree = getNativeInterface(accDoc, "tree");
+    const treeItems = tree.getAttributeValue("AXChildren");
+
+    is(treeItems.length, 2, "Outline has two direct children");
+    is(treeItems[0].getAttributeValue("AXDisclosing"), 0);
+    is(treeItems[1].getAttributeValue("AXDisclosing"), 1);
+
+    is(treeItems[0].isAttributeSettable("AXDisclosing"), true);
+    is(treeItems[1].isAttributeSettable("AXDisclosing"), true);
+
+    // attempt to change attribute values
+    treeItems[0].setAttributeValue("AXDisclosing", 1);
+    treeItems[0].setAttributeValue("AXDisclosing", 0);
+
+    // verify they're unchanged
+    is(treeItems[0].getAttributeValue("AXDisclosing"), 0);
+    is(treeItems[1].getAttributeValue("AXDisclosing"), 1);
+  }
+);
